# csv_report_generator

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
src/cli/: args_parser.py
src/data/: csv_reader.py
src/reports/: __init__.py  base_report.py  median_coffee_report.py  report_factory.py
tests/: conftest.py
tests/test_cli/: conftest.py  test_args_parser.py
tests/test_data/: test_csv_reader.py
tests/test_reports/: conftest.py  results.py  test_median_coffee_report.py  test_report_factory.py
